--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,18 @@
             "App\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Test\\": "tests/"
+        }
+    },
     "scripts": {
-        "start": "php -S localhost:8000 -t public",
+        "chat": "php -S localhost:8000 -t public",
         "test": "phpunit --configuration phpunit.xml",
-        "test:coverage": "phpunit --configuration phpunit.xml --coverage-clover build/logs/clover.xml --coverage-html build/coverage"
+        "test:coverage": "phpunit --configuration phpunit.xml --coverage-clover build/logs/clover.xml --coverage-html build/coverage",
+        "conf": "phpunit --migrate-configuration"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.3"
     }
 }
